--- a/Elisheva/config/niri/settings.json
+++ b/Elisheva/config/niri/settings.json
@@ -1,21 +1,21 @@
 {
   "currentThemeName": "custom",
   "customThemeFile": "/home/rplakama/.config/nixos/Elisheva/config/niri/chalkjson.json",
-  "matugenScheme": "scheme-neutral",
-  "runUserMatugenTemplates": false,
+  "matugenScheme": "scheme-tonal-spot",
+  "runUserMatugenTemplates": true,
   "matugenTargetMonitor": "",
   "dankBarTransparency": 1,
-  "dankBarWidgetTransparency": 1,
+  "dankBarWidgetTransparency": 0.5,
   "popupTransparency": 1,
-  "dockTransparency": 0,
-  "widgetBackgroundColor": "s",
+  "dockTransparency": 1,
+  "widgetBackgroundColor": "sch",
   "cornerRadius": 6,
   "use24HourClock": true,
   "showSeconds": false,
   "useFahrenheit": false,
   "nightModeEnabled": false,
-  "animationSpeed": 2,
-  "customAnimationDuration": 300,
+  "animationSpeed": 1,
+  "customAnimationDuration": 500,
   "wallpaperFillMode": "Fill",
   "blurredWallpaperLayer": false,
   "blurWallpaperOnOverview": true,
@@ -74,41 +74,40 @@
       "id": "audioInput",
       "enabled": true,
       "width": 50
+    },
+    {
+      "id": "idleInhibitor",
+      "enabled": true,
+      "width": 50
+    },
+    {
+      "id": "doNotDisturb",
+      "enabled": true,
+      "width": 50
     }
   ],
   "showWorkspaceIndex": false,
   "showWorkspacePadding": false,
-  "workspaceScrolling": true,
+  "workspaceScrolling": false,
   "showWorkspaceApps": false,
   "maxWorkspaceIcons": 3,
-  "workspacesPerMonitor": false,
+  "workspacesPerMonitor": true,
   "dwlShowAllTags": false,
   "workspaceNameIcons": {},
-  "waveProgressEnabled": false,
+  "waveProgressEnabled": true,
   "clockCompactMode": false,
   "focusedWindowCompactMode": false,
   "runningAppsCompactMode": true,
-  "keyboardLayoutNameCompactMode": true,
+  "keyboardLayoutNameCompactMode": false,
   "runningAppsCurrentWorkspace": false,
   "runningAppsGroupByApp": false,
-  "clockDateFormat": "d/M",
-  "lockDateFormat": "d/M",
+  "clockDateFormat": "",
+  "lockDateFormat": "",
   "mediaSize": 1,
   "dankBarLeftWidgets": [
-    {
-      "id": "launcherButton",
-      "enabled": true
-    },
-    {
-      "id": "idleInhibitor",
-      "enabled": true
-    },
+    "launcherButton",
     {
       "id": "notificationButton",
-      "enabled": true
-    },
-    {
-      "id": "privacyIndicator",
       "enabled": true
     }
   ],
@@ -127,14 +126,8 @@
     }
   ],
   "dankBarRightWidgets": [
-    {
-      "id": "systemTray",
-      "enabled": true
-    },
-    {
-      "id": "battery",
-      "enabled": true
-    },
+    "systemTray",
+    "battery",
     {
       "id": "controlCenterButton",
       "enabled": true,
@@ -146,25 +139,25 @@
   "dankBarWidgetOrder": [],
   "appLauncherViewMode": "list",
   "spotlightModalViewMode": "list",
-  "sortAppsAlphabetically": true,
+  "sortAppsAlphabetically": false,
   "appLauncherGridColumns": 4,
-  "weatherLocation": "Camaragibe, Região Nordeste",
-  "weatherCoordinates": "-8.0213832,-34.9810768",
-  "useAutoLocation": false,
+  "weatherLocation": "New York, NY",
+  "weatherCoordinates": "40.7128,-74.0060",
+  "useAutoLocation": true,
   "weatherEnabled": true,
-  "networkPreference": "wifi",
+  "networkPreference": "auto",
   "vpnLastConnected": "",
   "iconTheme": "System Default",
   "launcherLogoMode": "os",
   "launcherLogoCustomPath": "",
-  "launcherLogoColorOverride": "surface",
-  "launcherLogoColorInvertOnMode": true,
-  "launcherLogoBrightness": 1,
-  "launcherLogoContrast": 0,
+  "launcherLogoColorOverride": "",
+  "launcherLogoColorInvertOnMode": false,
+  "launcherLogoBrightness": 0.5,
+  "launcherLogoContrast": 1,
   "launcherLogoSizeOffset": 0,
-  "fontFamily": "Montserrat Medium",
+  "fontFamily": "Inter Variable",
   "monoFontFamily": "Fira Code",
-  "fontWeight": 500,
+  "fontWeight": 400,
   "fontScale": 1,
   "dankBarFontScale": 1,
   "notepadUseMonospace": true,
@@ -173,20 +166,20 @@
   "notepadShowLineNumbers": false,
   "notepadTransparencyOverride": -1,
   "notepadLastCustomTransparency": 0.7,
-  "soundsEnabled": false,
+  "soundsEnabled": true,
   "useSystemSoundTheme": false,
   "soundNewNotification": true,
-  "soundVolumeChanged": false,
+  "soundVolumeChanged": true,
   "soundPluggedIn": true,
-  "acMonitorTimeout": 900,
-  "acLockTimeout": 600,
+  "acMonitorTimeout": 1800,
+  "acLockTimeout": 900,
   "acSuspendTimeout": 3600,
   "acSuspendBehavior": 0,
   "batteryMonitorTimeout": 600,
   "batteryLockTimeout": 300,
   "batterySuspendTimeout": 900,
   "batterySuspendBehavior": 0,
-  "lockBeforeSuspend": true,
+  "lockBeforeSuspend": false,
   "preventIdleForMedia": true,
   "loginctlLockIntegration": true,
   "launchPrefix": "",
@@ -198,25 +191,25 @@
   "gtkThemingEnabled": false,
   "qtThemingEnabled": false,
   "syncModeWithPortal": true,
-  "terminalsAlwaysDark": true,
+  "terminalsAlwaysDark": false,
   "showDock": false,
   "dockAutoHide": false,
   "dockGroupByApp": false,
   "dockOpenOnOverview": false,
-  "dockPosition": 3,
-  "dockSpacing": 0,
+  "dockPosition": 1,
+  "dockSpacing": 4,
   "dockBottomGap": 0,
   "dockMargin": 0,
   "dockIconSize": 40,
-  "dockIndicatorStyle": "line",
+  "dockIndicatorStyle": "circle",
   "notificationOverlayEnabled": false,
   "dankBarAutoHide": false,
-  "dankBarAutoHideDelay": 506,
+  "dankBarAutoHideDelay": 250,
   "dankBarOpenOnOverview": true,
   "dankBarVisible": false,
   "dankBarSpacing": 0,
   "dankBarBottomGap": 0,
-  "dankBarInnerPadding": 0,
+  "dankBarInnerPadding": -5,
   "dankBarPosition": 2,
   "dankBarSquareCorners": true,
   "dankBarNoBackground": false,
@@ -225,7 +218,7 @@
   "dankBarGothCornerRadiusValue": 12,
   "dankBarBorderEnabled": false,
   "dankBarBorderColor": "surfaceText",
-  "dankBarBorderOpacity": 0.13,
+  "dankBarBorderOpacity": 1,
   "dankBarBorderThickness": 1,
   "popupGapsAuto": true,
   "popupGapsManual": 4,
@@ -237,7 +230,7 @@
   "notificationTimeoutLow": 5000,
   "notificationTimeoutNormal": 5000,
   "notificationTimeoutCritical": 0,
-  "notificationPopupPosition": 2,
+  "notificationPopupPosition": 0,
   "osdAlwaysShowValue": false,
   "osdPosition": 5,
   "osdVolumeEnabled": true,
